--- a/odoo.yaml
+++ b/odoo.yaml
@@ -4,7 +4,7 @@ metadata:
   name: odoo
   namespace: argocd
 spec:
-  project: odoo
+  project: default
   source:
     chart: bitnami/odoo
     repoURL: https://charts.bitnami.com/bitnami
