--- a/odoo.yaml
+++ b/odoo.yaml
@@ -1,16 +1,20 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: odoo-1
-  namespace: argocd
-spec:
-  project: odoo-project
-  source:
-    chart: bitnami/odoo
-    repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 23.0.3
-    helm:
-      releaseName: odoo
-  destination:
-    server: "https://kubernetes.default.svc"
-    namespace: odoo
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: odoo-1
+#   namespace: argocd
+# spec:
+#   project: default
+#   source:
+#     chart: odoo
+#     repoURL: https://charts.bitnami.com/bitnami
+#     targetRevision: 23.0.3
+#     helm:
+#       releaseName: odoo
+#   destination:
+#     server: "https://kubernetes.default.svc"
+#     namespace: odoo
+#   syncPolicy:
+#     automated: {}
+#     syncOptions:
+#       - CreateNamespace=true
