Added Odoo Application

--- a/odoo.yaml
+++ b/odoo.yaml
@@ -1,20 +1,20 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: odoo-1
-#   namespace: argocd
-# spec:
-#   project: default
-#   source:
-#     chart: odoo
-#     repoURL: https://charts.bitnami.com/bitnami
-#     targetRevision: 23.0.3
-#     helm:
-#       releaseName: odoo
-#   destination:
-#     server: "https://kubernetes.default.svc"
-#     namespace: odoo
-#   syncPolicy:
-#     automated: {}
-#     syncOptions:
-#       - CreateNamespace=true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: odoo-1
+  namespace: argocd
+spec:
+  project: default
+  source:
+    chart: odoo
+    repoURL: https://charts.bitnami.com/bitnami
+    targetRevision: 23.0.3
+    helm:
+      releaseName: odoo
+  destination:
+    server: "https://kubernetes.default.svc"
+    namespace: odoo
+  syncPolicy:
+    automated: {}
+    syncOptions:
+      - CreateNamespace=true
